--- a/yiuhei/public/index.html
+++ b/yiuhei/public/index.html
@@ -7,13 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="HANDCRAFTED ESSENTIALS"
     />
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="yiu hei">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+English&display=swap" rel="stylesheet"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Yiu Hei</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
